--- a/public/css/filmami_commun.css
+++ b/public/css/filmami_commun.css
@@ -9,6 +9,9 @@
 .navbar a {
     color: white;
 }
+.form-control {
+    border: 3px solid rgba(92, 114, 116, 0.55);
+}
 .bonjour {
     display: flex;
 }
