--- a/templates/admin/ville/index.html.twig
+++ b/templates/admin/ville/index.html.twig
@@ -5,7 +5,7 @@
     <div class="container-fluid">
         <h1 class="police">FILMAMI</h1>
     <div class="main">
-        <div class="col-9">
+        <div class="col-md-12">
 
             <h1>Gestion des Villes</h1>
 
