--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
 {#         ///////         NAVBAR    ADMIN            ///////               #}
 {% if is_granted('ROLE_ADMIN') %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-        <a href="{{ path('app_index_index') }}"  alt=""><img class="navbar-brand" width="100" height="60" src="{{ asset('img/logo.png') }}" alt=""></a>
+        <a href="{{ path('app_index_index') }}"  alt=""><img class="navbar-brand" width="85" height="50" src="{{ asset('img/logo.png') }}" alt=""></a>
         <a class="navbar-brand" href="{{ path('app_index_index') }}">FilmAmi</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,11 +44,11 @@
                 </li>
             </ul>
             <div class="bonjour">
-                <div>
+                <div class="davy">
                     <a class="nav-item nav-link nav-link2" href="#">Bonjour {{ app.user }} !</a>
                 </div>
                 <div>
-                    <button class="nav-item btn btn-outline-light my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
+                    <button class="nav-item btn btn-outline-dark my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
                 </div>
             </div>
         </div>
@@ -77,11 +77,11 @@
                 </li>
             </ul>
             <div class="bonjour">
-                <div>
+                <div class="davy">
                     <a class="nav-item nav-link nav-link2" href="#">Bonjour {{ app.user }} !</a>
                 </div>
                 <div>
-                    <button class="nav-item btn btn-outline-light my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
+                    <button class="nav-item btn btn-outline-dark my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
                 </div>
             </div>
         </div>
