--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -109,15 +109,15 @@
 
     {#    footer html #}
     <footer>
-        <h4>Nos réseaux sociaux:</h4>
+        <span>Nos réseaux sociaux :</span>
         <div class="row">
             <a href="https://twitter.com/"><img src="img/logo_twitter.png" alt=""></a>
             <a href="https://www.instagram.com/"><img src=img/logo_instagram.png alt=""></a>
             <a href="https://www.facebook.com/"><img src="img/logo_facebook.png" alt=""></a>
         </div>
-        <h5><a href="{{ path('app_index_contact') }}">Contactez-nous !</a></h5>
-        <br>
-        <h6> Copyright &copy;Filmami 2020</h6>
+        <span><a class="double" href="{{ path('app_index_contact') }}">Contactez-nous !</a></span>
+
+        <span> Copyright &copy;Filmami 2020</span>
     </footer>
 
 {% block javascripts %}
