--- a/templates/suggestion/index.html.twig
+++ b/templates/suggestion/index.html.twig
@@ -74,7 +74,7 @@
             </form>
         </div>
         <div>
-            <span class="voici">Voulez-vous voir votre profil?</span>
+            <span class="voici">Voulez-vous voir votre profil?</span> <br>
                 <a type="button"  class="btn btn-dark mb-2" href="{{ path('app_profil_index') }}" > Voir mon profil !</a>
         </div>
         </div>
