--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -9,16 +9,13 @@
 
 
 {% block body %}
-
     <div class="container-fluid">
         <!-------------------------- HEADER --------------------------------------->
         <div class="row">
-            <div class="col">
-                <div class=" formconnex">
-
+            <div class="col mt-4">
                     <!-------- Formulaire de connexion -------->
                     <form class="form-inline" action="{{ path('app_index_connexion') }}" method="post">
-                        <div class="form-group mb-2 " id="dejamembre">Déjà membre ?</div>
+                        <div class="form-group mt-2 " id="dejamembre">Déjà membre ?</div>
                         <div class="form-group mx-sm-3 mb-2">
                             <label for="inputPassword2" class="sr-only">Email</label>
                             <input type="email" class="form-control" name="_username" value="" placeholder="Email"
@@ -32,28 +29,25 @@
                         <input type="hidden" name="_target_path" value="{{ path('app_suggestion_index') }}">
                         <button type="submit" class="btn btn-dark mb-2" id="btnco">Se connecter</button>
                     </form>
-                </div>
             </div>
         </div>
         <!-------- Fin formulaire de connexion -------->
 
         <!-------- Bannière -------->
         <div class="row">
-            <div class="col">
-                <div class="banniere">
+            <div class="col text-center mt-5 mb-4">
                     <h1 class="bienvenue">Bienvenue sur <br>
                         <span class="nomdusite">Filmami</span>
                     </h1>
                     <div class="argument">Rencontrez des gens qui partagent votre passion.</div>
                     <br>
-                </div>
             </div>
         </div>
         <!-------- Fin bannière -------->
 
         <!-------- Carousel -------->
         <div class="row">
-            <div class="col">
+            <div class="col mb-5">
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -82,13 +76,12 @@
 
         <!-------------------------- MAIN --------------------------------------->
 
-        <!-------- Col gauche -------->
         <div class="row">
-
+            <!-------- Col gauche -------->
             <!--            A propos -->
-            <div class="col-8">
-                <div class="apropos">
-                    <h2 class="bienvenue">Le concept</h2>
+            <div class="col-7 ml-5">
+                    <h2>Le concept</h2>
+                <br>
                     <p>Filmami est une plateforme qui permet de vous mettre en relation avec des personnes près de chez
                         vous, ayant les mêmes goûts que vous en matière de film.</p>
                     <p>Tous les jours votre page de match vous proposera de nouveaux profils, séléctionnés juste pour
@@ -103,39 +96,47 @@
                     <hr>
 
                     <!--- Qui sommes nous---->
-                    <h2 class="bienvenue">Qui sommes nous</h2>
+                    <h2>Qui sommes nous</h2>
+                <br>
+                    <p>Nous sommes une PME dont le siège social est situé à Paris, toute récente. </p>
+                <p>Filmami a pu naitre grâce à notre intérêt à la fois pour le cinéma mais aussi pour le partage !</p>
+                    <p>Notre objectif ? Que tous les fans de cinema puissent se retrouver sur une plateforme pour partager leur passion commune.</p>
+                <p>N'hésitez pas à nous contacter pour toute demande d'informations supplémentaires.</p>
                     <br>
-                    <p>Nous sommes une PME dont le siège social est situé à Paris. </p>
-                    <br>
-                    <p>Notre objectif ? Que tous les fans de cinema puissent se retrouver sur une plateforme pour
-                        partager
-                        leur passion commune.</p>
-                    <br></div>
             </div>
 
             <!-------- Col droite -------->
 
-            <div class="col-4">
-                <div class="inscrit">
-                        <span class="inscription">Pas encore membre? <br></span>
-                        <div class="forminscri">
-                                <!--          Formulaire d'inscription -->
-                                <div class="card-body">
-                                    {{ form_start(form) }}
-                                   {{ form_row(form.pseudo) }}
-                                   {{ form_row(form.ville) }}
-                                    {{ form_row(form.genre) }}
-                                    {{ form_row(form.email) }}
-                                    {{ form_row(form.mdpClair) }}
-                                    <br>
-                                    <button type="submit" class="btn btn-dark col-md-8 p-1" id="boutoninscription">
-                                        Inscription
-                                    </button>
-                                    {{ form_end(form) }}
-                                </div>
-                            </div>
+            <div class="col-4 ml-5">
+                <div class="row">
+                    <div class="col ml-5 text-center">
+                    <div class="row">
+                        <div class="col-10">
+                            <div class="col mb-5 font-weight-bold text-uppercase">Pas encore membre?</div>
+<div class="row">
+    <div class="col border border-grey p-4">
+        <!--          Formulaire d'inscription -->
+        {{ form_start(form) }}
+        {{ form_row(form.pseudo) }}
+        {{ form_row(form.ville) }}
+        {{ form_row(form.genre) }}
+        {{ form_row(form.email) }}
+        {{ form_row(form.mdpClair) }}
+        <br>
+        <button type="submit" class="btn btn-dark col-md-8 p-1" id="boutoninscription">
+            Inscription
+        </button>
+        {{ form_end(form) }}
+    </div>
+</div>
+
+                        </div>
+                    </div>
                     </div>
                 </div>
+
+
+            </div>
             <br>
         </div>
 
