--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -41,28 +41,28 @@
 
                             <!-------- Col Droite -------->
                             <div class="col-xs ml-5 mt-5 mr-5 mb-5" id="droite">
-                                <div class="col text-center mb-4 p-1" ><h2>{{ profil.pseudo }}</h2></div>
-                                <div class="col p-1">Ville : &nbsp {{ profil.ville.nom }}</div>
+                                <div class="col text-center mb-4 p-1"><h2>{{ profil.pseudo }}</h2></div>
+                                <div class="col p-1">Ville <span class="txt">:</span> {{ profil.ville.nom }}</div>
 
                                 <!-------- L'âge renseigné ou non -------->
                                 <div class="col p-1">
                                     {% if profil.age is not null %}
-                                        Age &nbsp: &nbsp {{ profil.age }}
+                                        Age <span class="txt">:</span> {{ profil.age }}
                                     {% else %}
-                                        Age &nbsp: &nbsp Non renseigné
+                                        Age <span class="txt">:</span> Non renseigné
                                     {% endif %}
                                 </div>
 
                                 <!-------- Sexe renseigné ou non -------->
                                 <div class="col p-1">
                                     {% if profil.sexe is not null %}
-                                        Sexe &nbsp: &nbsp {{ profil.sexe }}
+                                        Sexe <span class="txt">:</span> {{ profil.sexe }}
                                     {% else %}
-                                        Sexe &nbsp: &nbsp Non renseigné
+                                        Sexe <span class="txt">:</span> Non renseigné
                                     {% endif %}</div>
-                                <div class="col p-1"> Email &nbsp: &nbsp {{ profil.email }}</div>
+                                <div class="col p-1"> Email <span class="txt">:</span> {{ profil.email }}</div>
                                 <br>
-                                <div class="col p-1" id="genre">Genre de films préféré : {{ profil.genre.type }}</div>
+                                <div class="col p-1" id="genre">Genre de films préféré <span class="txt">:</span> {{ profil.genre.type }}</div>
                             </div>
                         </div>
 
@@ -87,16 +87,16 @@
                 </div>
             </div>
 
+        </div>
+
+        <div class="row d-flex justify-content-center">
+
+            <div class="col-xs">
+                <a type="button" href="{{ path('app_profil_edit') }}"
+                   class="btn btn-dark mt-5 mb-5 rounded">
+                    Modifier votre profil
+                </a>
             </div>
-
-    <div class="row d-flex justify-content-center">
-
-    <div class="col-xs">
-        <a type="button" href="{{ path('app_profil_edit') }}"
-           class="btn btn-dark mt-5 mb-5 rounded" >
-            Modifier votre profil
-        </a>
-    </div>
-    </div>
+        </div>
     </div>
 {% endblock %}
